<resources>
    <string name="app_name">Feedify</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Menu -->
    <string name="login_menu_title">Welcome back. \nLogin to access your Feedify</string>
    <string name="login_menu_login">Login</string>
    <string name="login_menu_register">Register</string>

    <!-- Login Login -->
    <string name="login_login_title">Login to Feedify</string>
    <string name="login_login_username">Username</string>
    <string name="login_login_password">Password</string>
    <string name="login_login_login">Login</string>

    <string name="login_error_bad_credentials">Bad username or password</string>
    <string name="login_error_bad_params">Bad params</string>


    <!-- Login Register -->
    <string name="login_register_title">Register to Feedify</string>
    <string name="login_register_username">Username</string>
    <string name="login_register_password">Password</string>
    <string name="login_register_login">Register</string>
    <string name="login_register_error_already_exists">Already exists</string>
    <string name="login_register_error_bad_params">Bad params</string>
    <string name="login_register_success">Your account has been created</string>

    <!-- Main Activity -->
    <string name="menu_home">Home</string>

    <!-- FEED -->
    <string name="feed_tmp">Chrome is starting to support native OS X notifications</string>
    <string name="feed_tmp2">Google is building support for OS X\'s</string>
    <string name="feed_time">Feb 20, 2016, 5:13:55 PM</string>
    <string name="feed_new">New</string>
    <string name="feed_image">https://cdn2.vox-cdn.com/thumbor/c1SboxNb2sWxrO_IV6Bhu6itscI=/0x0:1226x817/1310x873/cdn0.vox-cdn.com/uploads/chorus_image/image/49253627/Screen_Shot_2016-04-06_at_6.34.56_PM.0.0.png</string>

    <!-- Feed Details -->

    <string name="feed_details_tmp">If the LG G5 was just another Android rectangle, I could end this review right now with the words “buy the Galaxy S7 Edge.” LG’s riposte to Samsung is, however, more ambitious than a single phone. The G5’s intrigue stems from a set of extra accessories that plug directly into its bottom, augmenting its battery life, camera controls, and audio performance. Think of it as a Game Boy with functionality cartridges, if you will. Modularity holds out the promise of greater versatility than a regular smartphone, and it also offers a route to upgrading and improving the G5 long after its initial purchase. In a market full of mostly cosmetic or battery-enhancing accessories, a phone that can truly be augmented with plug-in extras stands out as a...</string>
    <string name="feed_section_offline">Dispo hors ligne</string>


    <!-- Menu -->
    <string name="menufeed_news">30</string>
    <string name="snackbar_menu_delete">Do you want to delete this feed ?</string>
    <string name="menufeed_menu_asread">Mark all articles as read</string>


    <!-- Add Feed -->
    <string name="feed_add_text">Add a feed</string>
    <string name="feed_add_button">Add</string>
    <string name="feed_add_et_hint_name">Name</string>
    <string name="feed_add_et_hint_url">Url</string>
    <string name="title_activity_details">DetailsActivity</string>

    <!-- Transition -->
    <string name="transition_feed_title">transition:TITLE</string>
    <string name="transition_feed_image">transition:IMAGE</string>
    <string name="transition_feed_link_img">transition:LINKIMG</string>
    <string name="transition_feed_link_txt">transition:LINKTXT</string>

    <!-- Settings -->
    <string name="detailuser_admin">Administrator</string>
    <string name="detailuser_update">Update user</string>
    <string name="detailuser_delete">Delete your account</string>

    <string name="snackbar_admin_delete">Do you want to delete this user ?</string>
    <string name="snackbar_admin_selfdelete">You cannot delete yourself here</string>
    <string name="snackbar_deleteyourself">Are you sure you want to delete your account?</string>

    <string name="admin_adduser_label">Add a user</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_offline_feed">Enable offline feed</string>
    <string name="pref_description_offline_feed">With the offline feed option, you can access to your last feed totaly offline!</string>

</resources>
