<?xml version="1.0" encoding="utf-8"?>
<!-- adapter_feed.xml -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    card_view:cardCornerRadius="4dp">

    <TextView
        android:id="@+id/feed_read"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_margin="7dp"
        android:layout_gravity="right"
        android:gravity="left"
        android:textColor="@color/white"
        android:background="@drawable/drawable_notification"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/feed_image"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:transitionName="@string/transition_feed_image"
            fresco:viewAspectRatio="1.33"
            fresco:roundedCornerRadius="1dp"
            fresco:roundTopLeft="true"
            fresco:roundTopRight="true"
            fresco:roundBottomLeft="true"
            fresco:roundBottomRight="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/feed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feed_tmp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:transitionName="@string/transition_feed_title"/>

            <TextView
                android:id="@+id/feed_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feed_tmp2"
                android:textSize="13sp"/>

            <!--<TextView-->
                <!--android:id="@+id/feed_read"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3.5"-->
                <!--android:layout_gravity="left"-->
                <!--android:gravity="left"-->
                <!--android:textColor="@color/white"-->
                <!--android:background="@drawable/drawable_notification"-->
                <!--android:text="@string/menufeed_news"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/feed_link_img"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/feed_link"
                    android:transitionName="@string/transition_feed_link_img"/>

                <TextView
                    android:id="@+id/feed_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/feed_time"
                    android:textSize="12sp"
                    android:textColor="@color/feed_time"
                    android:transitionName="@string/transition_feed_link_txt"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>